# tsscaffold

./: Cargo.toml
src/: domain.rs  lib.rs  main.rs
src/commands/: create_table.rs  insert.rs  insert_interface.rs  insert_sql.rs  mod.rs
testdata/: create_table_1.sql  create_table_2.sql  insert_1.sql  insert_2.sql  insert_interface_2.ts  table.yml  table_1.yml  table_2.yml
tests/: integration_tests.rs
