[package]
name = "tsscaffold"
version = "0.5.0"
authors = ["Ville Peurala <ville.peurala@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.3.1"
maplit = "1.0.2"
serde = "1.0"
serde_yaml = "0.8"
structopt = "0.3"

[dev-dependencies]
assert_cmd = "1.0.1"
grcov = "0.5.15"
pretty_assertions = "0.6.1"
